Update Uber Trips Analysis.ipynb

--- a/Uber Trips Analysis.ipynb
+++ b/Uber Trips Analysis.ipynb
@@ -104,7 +104,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "data = pd.read_csv(r\"C:/Users/Arvind/Santosh/Uber_Trips_Analysis/Dataset/uber-raw-data-sep14.csv\")\n",
+    "data = pd.read_csv(r\"C:/Users/Santosh/Uber_Trips_Analysis/Dataset/uber-raw-data-sep14.csv\")\n",
     "data[\"Date/Time\"] = data[\"Date/Time\"].map(pd.to_datetime) \n",
     "data.head()"
    ]
@@ -203,7 +203,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Arvind\\anaconda3\\lib\\site-packages\\seaborn\\distributions.py:2551: FutureWarning: `distplot` is a deprecated function and will be removed in a future version. Please adapt your code to use either `displot` (a figure-level function with similar flexibility) or `histplot` (an axes-level function for histograms).\n",
+      "C:\\Users\\Santosh\\anaconda3\\lib\\site-packages\\seaborn\\distributions.py:2551: FutureWarning: `distplot` is a deprecated function and will be removed in a future version. Please adapt your code to use either `displot` (a figure-level function with similar flexibility) or `histplot` (an axes-level function for histograms).\n",
       "  warnings.warn(msg, FutureWarning)\n"
      ]
     },
